[project]
name = "pamo_utilities"
version = "1.0"

authors = [
    { name = "MoJ", email = "pamo@justice.gov.uk" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
# Search only under src/
where = ["src"]
# Only include these package name patterns (match on *package names*, not paths)
include = ["pvenv_setup*", "stats_utils*", "report_builder*"]
namespaces = true
